--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
   <body>
     {{content-for "body"}}
 
+    <script src="{{rootURL}}assets/javascript/FileBufferReader.js"></script>
+    <script src="{{rootURL}}assets/javascript/linkify.js"></script>
+    <script src="{{rootURL}}assets/javascript/RTCMultiConnection.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/peersupport.js"></script>
 
