--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <script src="{{rootURL}}assets/javascript/FileBufferReader.js"></script>
     <script src="{{rootURL}}assets/javascript/linkify.js"></script>
     <script src="{{rootURL}}assets/javascript/RTCMultiConnection.js"></script>
+    <script src="{{rootURL}}assets/javascript/peer_connection.js"></script>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/peersupport.js"></script>
 
